--- a/7post-mancarea-campionilor.html
+++ b/7post-mancarea-campionilor.html
@@ -35,8 +35,6 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
 
 	<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'> -->
 
@@ -52,7 +50,7 @@
 	<link rel="stylesheet" href="css/magnific-popup.css">
 
 	<link rel="stylesheet" href="css/style.css">
-
+	<link rel="shortcut icon" href="images/favicon.ico">
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
@@ -68,7 +66,7 @@
 
 		<div class="fh5co-hero">
 			<div class="fh5co-overlay"></div>
-			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/pilates2.jpg);">
+			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/micdejunback.jpg);">
 				<div class="desc animate-box">
 					<div class="container">
 						<div class="col-md-10 col-md-offset-1">
@@ -227,15 +225,15 @@
 
 	<div class="col-md-4">
 		<div class="feature-text">
-			<h2><i>Sport</i></h2>
-			<p>Practica un sport timp de cel putin 45 de minute! Recomandarile noastre:</p>
+			<h2><i>Cina</i></h2>
+			<p>-budinca de chia si legume la cuptor</p>
 			<ul>
-				<li>inot -tonifiaza muschii</li>
-				<li>jogging -revigoreaza corpul</li>
-				<li>tenis de camp -lucreaza mobilitatea</li>
-				<li>ciclism -antreneaza rezistenta</li>
-				<li>volei -echilibru corp-minte</li>
-				<li>baschet -foarte recreativ!</li>
+				<li>3 linguri seminte de chia bio</li>
+				<li>280ml lapte de capra</li>
+				<li>150g mix de legume</li>
+				<li>un praf de piper</li>
+			</ul>
+			<p>Pune semintele de chia in lapte si lasa-le, de preferat, peste noapte sa se umfle. Pune legumele intr-o tava la cuptor pentru 20 de minute la foc mediu.</p>
 </div>
 </div>
 </div>
