--- a/Gradina.html
+++ b/Gradina.html
@@ -25,12 +25,6 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
-
-	<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'> -->
-
-	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
 	<link rel="stylesheet" href="css/icomoon.css">
@@ -43,7 +37,7 @@
 
 	<link rel="stylesheet" href="css/style.css">
 
-
+	<link rel="shortcut icon" href="images/favicon.ico">
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
@@ -66,7 +60,6 @@
 							<div class="animate-box">
 								<h2>Gradina - poezia naturii</h2>
 
-								<!-- <p><a class="btn btn-primary btn-lg" href="bloggradina.html">Vezi Articole de Gradinarit</a></p> -->
 
 							</div>
 						</div>
@@ -133,14 +126,14 @@
 					</div>
 					<div class="col-md-4">
 						<div class="feature-text">
-							<h3>Folosire</h3>
-							<p>Fie ca esti la cantina, impreuna cu prietenii in oras sau acasa la parintii prietenei tale, este important sa lasi o impresie buna. Dar cum?</p>
+							<h3>Ingrijire</h3>
+							<p>Jungla este jungla, iar gradina, gradina. Daca ti se pare ca nu este nicio diferenta intre cele doua, ai mare nevoie de ajutorul nostru.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="feature-text">
 							<h3>Echipament</h3>
-							<p>Stii si tu cum e atunci cand ti se ard clatitele in tigaie iar tigaia se innegreste? Nu dispera, te invatam sa ai grija de echipamentele de bucatarie!</p>
+							<p>Daca papucii tai de casa nu fac fata muntelui de noroi de afara, iti recomandam niste cizme de cauciuc. Crede-ne, exista!</p>
 						</div>
 					</div>
 				</div>
