--- a/articole.html
+++ b/articole.html
@@ -24,7 +24,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+
 
 
 	<!-- Animate.css -->
@@ -39,7 +39,7 @@
 	<link rel="stylesheet" href="css/magnific-popup.css">
 
 	<link rel="stylesheet" href="css/style.css">
-
+	<link rel="shortcut icon" href="images/favicon.ico">
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
@@ -225,7 +225,7 @@
 									<span class="posted_by">Decembrie 18</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Mai sunt câteva zile şi vine vacanţa, iar zapada vine odata cu ea.</p>
-									<p><a href="#">Learn More...</a></p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -239,7 +239,7 @@
 									<span class="posted_by">Noiembrie 19</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Adoptarea unui stil de viaţă sănătos presupune o schimbare.</p>
-									<p><a href="#">Learn More...</a></p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -253,7 +253,7 @@
 									<span class="posted_by">Decembrie 2</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Barbatii se plang de multe ori ca femeile sunt creaturi misterioase si complicate, ce sunt foarte greu de multumit.</p>
-									<p><a href="#">Learn More...</a></p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -266,7 +266,7 @@
 									<span class="posted_by">Decembrie 3</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Bombe absolut naturale şi pline de bunătăţi pentru corp, minte şi suflet!</p>
-									<p><a href="#">Learn More...</a></p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -280,7 +280,7 @@
 									<span class="posted_by">Decembrie 23</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Exista beneficii dincolo de placerea de a calarii; din punct de vedere fizic, mental si emotional.</p>
-									<p><a href="#">Learn More...</a></p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -294,7 +294,7 @@
 									<span class="posted_by">Septembrie 30</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Nu stii ce sa gatesti pentru cel mic?</p>
-									<p><a href="#">Learn More...</a></p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -319,14 +319,14 @@
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="1-post-tort-ciocolata.html"><img class="img-responsive" src="images/tort_cioco.jpg" alt=""></a>
+							<a href="1post-tort-ciocolata.html"><img class="img-responsive" src="images/tort_cioco.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Tort de ciocolata</a></h3>
 									<span class="posted_by">Ianuarie 12</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Perfect pentru petreceri si cine festive, este usor de facut si delicios!</p>
-									<p><a href="1-post-tort-ciocolata.html">Vezi mai mult...</a></p>
+									<p><a href="1post-tort-ciocolata.html">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -371,14 +371,14 @@
 
 
 						<div class="fh5co-blog animate-box">
-							<a href="7-post-mancarea-campionilor.html"><img class="img-responsive" src="images/micdejuncampion.jpg" alt=""></a>
+							<a href="7post-mancarea-campionilor.html"><img class="img-responsive" src="images/micdejuncampion.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Mancarea campionilor</a></h3>
 									<span class="posted_by">Decembrie 20</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Afla ce mancare te ajuta sa fii in forma!Pentru ca un plan alimentar sa fie unul de succes, stim cu totii ca avem nevoie de cele mai bune retete.</p>
-									<p><a href="7-post-mancarea-campionilor.html">Vezi mai mult...</a></p>
+									<p><a href="7post-mancarea-campionilor.html">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -393,7 +393,7 @@
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Daca ai visat, dintotdeauna, sa dai petreceri memorabile la tine acasa, dar te-ai impiedicat de problema spatiului,
 										introducerea unui bar in bucatarie este o solutie excelenta.</p>
-									<p><a href="#">Learn More...</a></p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -433,7 +433,7 @@
 									<span class="posted_by">Octombrie 7</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Pentru a planta și păstra cât mai bine florile de primăvară în grădina ta, ți-am pregătit un ghid cu sfaturi de care să ții cont.</p>
-									<p><a href="#">Learn More...</a></p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -447,7 +447,7 @@
 									<span class="posted_by">Septembrie 17</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Cartile citite deja sunt adesea obiecte de decor. Aranjeaza-le elegant!</p>
-									<p><a href="#">Learn More...</a></p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -461,7 +461,7 @@
 									<span class="posted_by">Ianuarie 1</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Legumele de primavara precum ridichile, ceapa verde, spanacul, salata verde, urzicile si loboda constituie o sursa importanta de energie pentru organism.</p>
-									<p><a href="#">Learn More...</a></p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -476,7 +476,7 @@
 									<span class="posted_by">Sep. 15th</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
 									<p>Toate fetele vor sa arate feminine iar o fusta cool este cel mai bun ajutor.</p>
-									<p><a href="#">Learn More...</a></p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -489,7 +489,7 @@
 									<span class="posted_by">Septembrie 15</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Perioadele in care trebuie sa inveti pentru examene sunt extrem de stresante si este foarte important sa ai grija de sanatatea ta psihica.</p>
-									<p><a href="#">Learn More...</a></p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -516,7 +516,7 @@
 									<span class="posted_by">Decembrie 24</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Munca implicată pentru dezvoltarea unei astfel de pepiniere este imensă, iar la bază trebuie să stea cunoștințe temeinice. </p>
-									<p><a href="#">Learn More...</a></p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -527,14 +527,14 @@
 					<div class="clearfix visible-sm-block"></div>
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="6-post-propria-ta-gradina.html"><img class="img-responsive" src="images/grbuc6.jpg" alt=""></a>
+							<a href="6post-propria-ta-gradina.html"><img class="img-responsive" src="images/grbuc6.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Gradina in bucatarie</a></h3>
 									<span class="posted_by">Decembrie 30</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Vrei sa ai condimente proaspete pentru mancarurile tale in fiecare zi?</p>
-									<p><a href="6-post-propria-ta-gradina.html">Vezi mai mult...</a></p>
+									<p><a href="6post-propria-ta-gradina.html">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -547,34 +547,34 @@
 									<span class="posted_by">Ianuarie 12</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Nu ai nevoie de un abonament la sala pentru a fi in forma. Niste muzica si o camera aerisita sunt de ajuns!</p>
-									<p><a href="5-post-pilates">Vezi mai mult...</a></p>
+									<p><a href="5post-pilates">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
 
 						<div class="fh5co-blog animate-box">
-							<a href="5post-pilates.html"><img class="img-responsive" src="images/blog-1.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="images/blog-1.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Bucatarie cu stil</a></h3>
 									<span class="posted_by">Decembrie 7</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>O bucătărie cu stil nu înseamnă neapărat un credit la bancă și nici mobilă din magazinele de firmă. </p>
-									<p><a href="5post-pilates.html">Vezi mai mult...</a></p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
 
 
 						<div class="fh5co-blog animate-box">
-							<a href="4-post-lupta-impotriva-depresiei.html"><img class="img-responsive" src="images/depresie.jpeg" alt=""></a>
+							<a href="4post-lupta-impotriva-depresiei.html"><img class="img-responsive" src="images/depresie.jpeg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Lupta impotriva depresiei</a></h3>
 									<span class="posted_by">Ianuarie 7</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Activitatile fizice ofera foarte multe beneficii sanatatii si starii tale de spirit. Traieste mai mult, traieste mai bine!</p>
-									<p><a href="4-post-lupta-impotriva-depresiei.html">Vezi mai mult...</a></p>
+									<p><a href="4post-lupta-impotriva-depresiei.html">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -656,7 +656,7 @@
 									<span class="posted_by">Decembrie 2</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Miscarile din timpul driblarilor, prinderile, pasele si sariturile cer planificare, precizie si reactii rapide.</p>
-									<p><a href="#">Learn More...</a></p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -670,7 +670,7 @@
 									<span class="posted_by">Septembrie 28</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Cand viata iti da lamai…fa cumva sa faci rost si de niste menta proaspata!</p>
-									<p><a href="#">Learn More...</a></p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -683,7 +683,7 @@
 									<span class="posted_by">Decembrie 1</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Insectele, melcii, ciupercile, cartitele pot sa creeze probleme serioase pentru plantele tale.</p>
-									<p><a href="#">Learn More...</a></p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -696,7 +696,7 @@
 									<span class="posted_by">Octombrie 20</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Esti colectionar de vinuri? Afla cum poti sa le etalezi cat mai frumos in casa ta.</p>
-									<p><a href="#">Learn More...</a></p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -709,7 +709,7 @@
 									<span class="posted_by">Decembrie 10</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Totul e foarte frumos atunci cand iti gasesti jumatatea si mai ales la inceput, cand iesirile in oras sunt foarte dese.</p>
-									<p><a href="#">Learn More...</a></p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
@@ -723,7 +723,7 @@
 									<span class="posted_by">Decembrie 2</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>De la muzica rock la muzica clasica - vezi cele mai energice piese care te pun cu adevarat in miscare! </p>
-									<p><a href="#">Learn More...</a></p>
+									<p><a href="#">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
