--- a/blogbucatarie.html
+++ b/blogbucatarie.html
@@ -24,7 +24,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+
 
 
 	<!-- Animate.css -->
@@ -39,7 +39,7 @@
 	<link rel="stylesheet" href="css/magnific-popup.css">
 
 	<link rel="stylesheet" href="css/style.css">
-
+	<link rel="shortcut icon" href="images/favicon.ico">
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
@@ -153,7 +153,7 @@
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="1-post-tort-ciocolata.html"><img class="img-responsive" src="images/tort_cioco.jpg" alt=""></a>
+							<a href="1post-tort-ciocolata.html"><img class="img-responsive" src="images/tort_cioco.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Tort de ciocolata</a></h3>
