--- a/blogsport.html
+++ b/blogsport.html
@@ -26,8 +26,6 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
 
 	<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'> -->
 
@@ -44,7 +42,7 @@
 
 	<link rel="stylesheet" href="css/style.css">
 
-
+	<link rel="shortcut icon" href="images/favicon.ico">
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
@@ -171,7 +169,7 @@
 						</div>
 
 						<div class="fh5co-blog animate-box">
-							<a href="7-post-mancarea-campionilor.html"><img class="img-responsive" src="images/micdejuncampion.jpg" alt=""></a>
+							<a href="7post-mancarea-campionilor.html"><img class="img-responsive" src="images/micdejuncampion.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Mancarea campionilor</a></h3>
@@ -201,7 +199,7 @@
 					<div class="clearfix visible-sm-block"></div>
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="4-post-lupta-impotriva-depresiei.html"><img class="img-responsive" src="images/depresie.jpeg" alt=""></a>
+							<a href="4post-lupta-impotriva-depresiei.html"><img class="img-responsive" src="images/depresie.jpeg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Lupta impotriva depresiei</a></h3>
