--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<meta name="twitter:card" content="" />
 
 
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="images/favicon.ico">
 
 
 	<!-- Animate.css -->
@@ -37,6 +37,8 @@
 	<link rel="stylesheet" href="css/magnific-popup.css">
 
 	<link rel="stylesheet" href="css/style.css">
+
+
 
 
 	<script src="js/modernizr-2.6.2.min.js"></script>
@@ -173,8 +175,8 @@ Your browser does not support the video tag.
 								<i class="icon-search"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Beneficii da nu cred</h3>
-								<p>bla bla</p>
+								<h3>Beneficii</h3>
+								<p>Invata sa privesti lumea si din alta perspectiva!</p>
 								<p><a href="#">Vezi mai mult</a></p>
 							</div>
 						</div>
@@ -217,8 +219,8 @@ Your browser does not support the video tag.
 								<i class="icon-genius"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>vedem</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<h3>Siguranta</h3>
+								<p>Cu noi ai siguranta ca faci ceea ce trebuie asa cum trebuie.</p>
 								<p><a href="#">Vezi mai mult</a></p>
 							</div>
 						</div>
@@ -325,43 +327,43 @@ Your browser does not support the video tag.
 				<div class="col-md-4 col-sm-4">
 					<div class="service animate-box">
 						<span><i class="icon-beaker"></i></span>
-						<h3>Bucatarie</h3>
-						<p>Nu ai inspiratie? Gasesti de la cele mai bune retete si idei de plating, la sfaturi si trucuri utile in bucataria ta! </p>
+						<h3>Experimenteaza</h3>
+						<p>Iesi din rutina si descopera lumea. Echipeaza-te si iti aratam ca te poti surprinde in fiecare zi!</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="service animate-box">
 						<span><i class="icon-heart"></i></span>
-						<h3>Pentru tine</h3>
-						<p>Dacă există un mijloc prin care să inspiri oamenii din jurul tau, acela este prin a fi tu însăti.</p>
+						<h3>Simplitate</h3>
+						<p>Dacă există un mijloc prin care să inspiri oamenii din jurul tau, acela este prin a fi tu însuti.</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="service animate-box">
 						<span><i class="icon-upload"></i></span>
-						<h3>Acasa</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+						<h3>Implinire</h3>
+						<p>Fericirea vine din interior. De la ceea ce gandim pana la ceea ce mancam. Alege sa fii fericit!</p>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-4">
+        <div class="col-md-4 col-sm-4">
 					<div class="service animate-box">
-						<span><i class="icon-globe"></i></span>
-						<h3>Nutritie</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+						<span><i class="icon-cloud"></i></span>
+						<h3>Echilibru</h3>
+						<p>Nu te lasa apasat de norii grei ai vietii. Dupa furtuna, soarele va rasari de fiecare data!</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="service animate-box">
 						<span><i class="icon-bike"></i></span>
-						<h3>Sport</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+						<h3>Dinamism</h3>
+						<p>Intr-o lume in care toti sunt pe repede-nainte, nu uita sa iti faci timp pentru lucrurile care conteaza.</p>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-4">
+        <div class="col-md-4 col-sm-4">
 					<div class="service animate-box">
-						<span><i class="icon-cloud"></i></span>
-						<h3>Gradina</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+						<span><i class="icon-globe"></i></span>
+						<h3>Siguranta</h3>
+						<p>Cand esti stapan pe cunostintele tale, nimic nu te poate dobori. Cauta, descopera, invata!</p>
 					</div>
 				</div>
 			</div>
