--- a/Casa-ta.html
+++ b/Casa-ta.html
@@ -21,9 +21,6 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-	<link rel="shortcut icon" href="favicon.ico">
-
-
 
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -37,7 +34,7 @@
 	<link rel="stylesheet" href="css/magnific-popup.css">
 
 	<link rel="stylesheet" href="css/style.css">
-
+	<link rel="shortcut icon" href="images/favicon.ico">
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
@@ -120,19 +117,19 @@
 					<div class="col-md-4">
 						<div class="feature-text">
 							<h3>Curatenie</h3>
-							<p>Invatati sa mentineti un stil de viata sanatos, incepand cu activitatea voastra preferata: mancatul. Recomandat pentru stundenti!</p>
+							<p>Stim ca iti place sa fie curat dar ca nu iti place sa faci curat. Atunci cand incepe sa se simta, nu dispera. Cu noi, pana si curatenia e joaca!</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="feature-text">
 							<h3>Idei</h3>
-							<p>Fie ca esti la cantina, impreuna cu prietenii in oras sau acasa la parintii prietenei tale, este important sa lasi o impresie buna. Dar cum?</p>
+							<p>Ai sters si tu praful o data si nu iti poti imagina cum reusisera toate acele carti sa incapa in dulap? Rearanjeaza!</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="feature-text">
 							<h3>Sfaturi</h3>
-							<p>Stii si tu cum e atunci cand ti se ard clatitele in tigaie iar tigaia se innegreste? Nu dispera, te invatam sa ai grija de echipamentele de bucatarie!</p>
+							<p>Ti-e rusine sa o suni pe mama ta sa iti explice pentru a zecea oara cum se pun hainele la spalat? E OK, iti spunem noi.</p>
 						</div>
 					</div>
 				</div>
