--- a/about.html
+++ b/about.html
@@ -38,8 +38,6 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
 
 	<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'> -->
 
@@ -55,7 +53,7 @@
 	<link rel="stylesheet" href="css/magnific-popup.css">
 
 	<link rel="stylesheet" href="css/style.css">
-
+	<link rel="shortcut icon" href="images/favicon.ico">
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
@@ -121,12 +119,12 @@
 		<!-- end:header-top -->
 
 
-		<div id="fh5co-feature-product" class="fh5co-section-gray">
+		<div id="fh5co-feature-product">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center heading-section">
-						<h3>Our History</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+						<h3>Si aici ce scriem?</h3>
+						<p>Pe noi ne stiti deja. Dar hai ca va mai spunem oricum:</p>
 					</div>
 				</div>
 
@@ -136,27 +134,27 @@
 					</div>
 
 				</div>
-				<div class="row">
+				<div class="row row-bottom-padded-md">
 					<div class="col-md-4">
 						<div class="feature-text">
-							<h3>Angular JS</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<h3>Amice</h3>
+							<p>Netrezind niciun interes o blondina pentru o roscata si invers, cele doua nu s-au imprietenit de la inceput.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="feature-text">
-							<h3>Node JS</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<h3>Prietene de nadejde</h3>
+							<p>Totusi, una a ademenit-o pe cealalta cu gogosi, cealalta i-a oferit mere, asa ca nu au mai putut rezista una alteia.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="feature-text">
-							<h3>Django Python</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<h3>Viitoare babe cu pisici</h3>
+							<p>Avand un viitor asigurat in ce priveste hrana, cele doua mai trebuie doar sa se ingrijeasca de pisici.</p>
 						</div>
 					</div>
 				</div>
-
+				<hr>
 
 			</div>
 		</div>
@@ -171,9 +169,8 @@
 								<i class="icon-hotairballoon"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Marketing</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-								<p><a href="#">Learn More</a></p>
+								<h3>Prin vazduh</h3>
+								<p>Noi in balon si balonul in aer! Pazea, clasa a XII-a, venim!!</p>
 							</div>
 						</div>
 
@@ -185,9 +182,8 @@
 								<i class="icon-search"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Search Engine</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-								<p><a href="#">Learn More</a></p>
+								<h3>Ce-i cu ele?</h3>
+								<p>Cand ai capul in toate partile, cum sa mai fii atent si la scoala?</p>
 							</div>
 						</div>
 
@@ -198,9 +194,8 @@
 								<i class="icon-wallet"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Earn Money</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-								<p><a href="#">Learn More</a></p>
+								<h3>Bani...</h3>
+								<p>De acum nu vor mai fi o problema, cu site-ul asta dam lovitura.</p>
 							</div>
 						</div>
 					</div>
@@ -215,9 +210,8 @@
 								<i class="icon-wine"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Entrepreneur</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-								<p><a href="#">Learn More</a></p>
+								<h3>Racoritoare</h3>
+								<p>In acest pahar este doar apa. Cele doua nu beau altceva. Poate doar suc de mere de la furnizor!</p>
 							</div>
 						</div>
 
@@ -229,9 +223,8 @@
 								<i class="icon-genius"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Stragic Plan</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-								<p><a href="#">Learn More</a></p>
+								<h3>Planuri de viitor</h3>
+								<p>Daca "Facultatea de Litere" insemna viitor, atunci...da!</p>
 							</div>
 						</div>
 
@@ -242,36 +235,36 @@
 								<i class="icon-chat"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Support</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-								<p><a href="#">Learn More</a></p>
+								<h3>Sustinere</h3>
+								<p>Parem noi inabordabile (si ne pare rau!!), dar va ajutam cu drag oricand!</p>
 							</div>
 						</div>
 					</div>
 				</div>
+<hr>
 			</div>
 		</div>
-
-		<div class="fh5co-content-section fh5co-section-gray">
+		<div class="fh5co-content-section">
 			<div class="container">
 				<div class="row row-bottom-padded-md">
 					<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
 						<h3></h3>
-						<h3>Our Team</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores, perspiciatis accusamus asperiores sint consequuntur debitis.</p>
+						<h3>Echipa</h3>
+						<p>Va prezentam cei mai priceputi oameni in "stiinta vietii". De ce sa ai nota 10 la scoala cand poti avea 10 la viata ?!</p>
 					</div>
 				</div>
 			</div>
 			<div class="container">
+
 				<div class="row">
 					<div class="col-md-4">
 						<div class="fh5co-team text-center animate-box">
 							<figure>
-								<img src="images/person_1.jpg" alt="user">
+								<img src="images/bingo.jpg" alt="user">
 							</figure>
-							<p>Jean Doe, XYZ Co. <br> <span class="text-mute">Designer</span></p>
+							<p>Ringo Bingo <br> <span class="text-mute">Suport tehnic si emotional</span></p>
 							<blockquote>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+								<p>Avand 9 vieti si vaste studii in supravietuirea pe strada, Ringo este un specialist si in ceea ce priveste viata de acasa.</p>
 							</blockquote>
 
 
@@ -280,11 +273,11 @@
 					<div class="col-md-4">
 						<div class="fh5co-team text-center animate-box">
 							<figure>
-								<img src="images/person_2.jpg" alt="user">
+								<img src="images/teo.jpg" alt="user">
 							</figure>
-							<p>Jean Doe, XYZ Co. <br> <span class="text-mute">Developer</span></p>
+							<p>Teodora <br> <span class="text-mute">Bucatareasa si vanzatoare</span></p>
 							<blockquote>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+								<p>Este recunoscuta pentru cele mai bune retete si tehnici de ademenire a copiilor.</p>
 							</blockquote>
 
 						</div>
@@ -292,23 +285,18 @@
 					<div class="col-md-4">
 						<div class="fh5co-team text-center animate-box">
 							<figure>
-								<img src="images/person_3.jpg" alt="user">
+								<img src="images/banana.jpg" alt="user">
 							</figure>
-							<p>Jean Doe, XYZ Co. <br> <span class="text-mute">Photographer</span></p>
+							<p>Ana-Maria <br> <span class="text-mute">Spalatoreasa si psiholog</span></p>
 							<blockquote>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+								<p>Cu vasta experienta in spalatul vaselor, va poate oferi si sfaturi de viata. Comic, nu?</p>
 							</blockquote>
 
 						</div>
 					</div>
 				</div>
-
-
-
 			</div>
 		</div>
-		<!-- fh5co-content-section -->
-
 
 
 
