--- a/bloggradina.html
+++ b/bloggradina.html
@@ -23,8 +23,7 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	
 
 	<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'> -->
 
@@ -40,7 +39,7 @@
 	<link rel="stylesheet" href="css/magnific-popup.css">
 
 	<link rel="stylesheet" href="css/style.css">
-
+	<link rel="shortcut icon" href="images/favicon.ico">
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
@@ -157,7 +156,7 @@
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="6-post-propria-ta-gradina.html"><img class="img-responsive" src="images/grbuc6.jpg" alt=""></a>
+							<a href="6post-propria-ta-gradina.html"><img class="img-responsive" src="images/grbuc6.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Gradina in bucatarie</a></h3>
@@ -185,7 +184,7 @@
 							<a href="#"><img class="img-responsive" src="images/springveg.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Legume de primavara</a></h3>
+									<h3><a href="#">Legume de primavara</a></h3>
 									<span class="posted_by">Ianuarie 1</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Legumele de primavara precum ridichile, ceapa verde, spanacul, salata verde, urzicile si loboda constituie o sursa importanta de energie pentru organism.</p>
