--- a/contact.html
+++ b/contact.html
@@ -38,12 +38,6 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
-
-	<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'> -->
-
-	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
 	<link rel="stylesheet" href="css/icomoon.css">
@@ -56,7 +50,7 @@
 
 	<link rel="stylesheet" href="css/style.css">
 
-
+	<link rel="shortcut icon" href="images/favicon.ico">
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
@@ -127,13 +121,13 @@
 				<form action="#">
 					<div class="row animate-box">
 						<div class="col-md-6">
-							<h3 class="section-title">Adresa Noastra</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<h3 class="section-title">Cand si unde suntem:</h3>
+							<p>Orar: L-V: 8-14, vinerea asta de la 7 (recuperam).</p>
 							<ul class="contact-info">
-								<li><i class="icon-location-pin"></i>198 West 21th Street, Suite 721 New York NY 10016</li>
-								<li><i class="icon-phone2"></i>+ 1235 2355 98</li>
-								<li><i class="icon-mail"></i><a href="#">info@yoursite.com</a></li>
-								<li><i class="icon-globe2"></i><a href="#">www.yoursite.com</a></li>
+								<li><i class="icon-location-pin"></i>Str. Ghirlandei, nr.4, 300231, Timisoara, Jud. Timis, Romania</li>
+								<li><i class="icon-phone2"></i>0778...scuza-ma, esti cam necopt</li>
+								<li><i class="icon-mail"></i><a href="https://www.google.com/search?newwindow=1&rlz=1C1CHBF_enRO802RO802&biw=1536&bih=723&tbm=isch&sa=1&ei=nb0_XLrvBcmdsAeu2KiQDA&q=puppy&oq=puppy&gs_l=img.3..0l10.24253.26126..26281...0.0..0.84.371.5......1....1..gws-wiz-img.......35i39j0i67.6JbKu8meFJY#imgrc=ak7pTzW7wH53xM:">anasiteonuaumailinca.com</a></li>
+								<li><i class="icon-globe2"></i><a href="https://www.google.com/search?newwindow=1&rlz=1C1CHBF_enRO802RO802&biw=1536&bih=723&tbm=isch&sa=1&ei=nb0_XLrvBcmdsAeu2KiQDA&q=puppy&oq=puppy&gs_l=img.3..0l10.24253.26126..26281...0.0..0.84.371.5......1....1..gws-wiz-img.......35i39j0i67.6JbKu8meFJY#imgrc=ak7pTzW7wH53xM:">anasiteonuausiteinca.com</a></li>
 							</ul>
 						</div>
 						<div class="col-md-6">
