--- a/1post-tort-ciocolata.html
+++ b/1post-tort-ciocolata.html
@@ -119,47 +119,6 @@
 			</div>
 		</header>
 
-		<!-- end:header-top -->
-
-
-
-<!--</div>
-		<div id="content">
-		  <div class="home">
-		    <div class="aside">
-		      <h1>Ingrediente</h1>
-		      <p>175gr ciocolata neagra</p>
-		      <p>150gr unt</p>
-		      <p>200gr zahar</p>
-					<p>35gr cacao pudra</p>
-					<p>7 oua</p>
-					<p>forma de copt ⌀ 25cm</p>
-		    </div>
-		    <div class="section">
-		      <div>
-		        <h2>Preparare</h2>
-		        <p>Lorem ipsum dolor sit amet, consectetuer adispiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exercitation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.</p>
-		      </div>
-		      <ul>
-		      <li class="first"> <a href="#"><img src="images/torto_cioco1.jpg" alt=""></a> </li>
-		        <li class="first"> <a href="#"><img src="images/tort_cioco2.jpg" alt=""></a> </li>
-		        <li> <a href="#"><img src="images/torto_cioco3.jpg" alt=""></a> </li>
-		      </ul>
-		    </div>
-		  </div>
-		</div> -->
-		<!--<div class="row">
-			<div class="column">
-				<img src="images/tort_cioco1.jpg" alt=Etapa1 style="width:100%">
-			</div>
-			<div class="column">
-				<img src="images/tort_cioco2.jpg" alt="Etapa2" style="width:100%">
-			</div>
-			<div class="column">
-				<img src="images/tort_cioco3.jpg" alt="Etapa3" style="width:100%">
-			</div>
-		</div>
--->
 
 <div id="fh5co-feature-product" > <!--class="fh5co-section-gray">-->
 	<div class="container">
@@ -179,17 +138,27 @@
 		<div class="row">
 			<div class="col-md-4">
 				<div class="feature-text">
-					<h3>Ingrediente</h3>
-					<p>2 oua</p>
-					<p>150gr unt</p>
-					<p>350gr zahar</p>
-					<p>85gr cacao pudra</p>
-					<p>225gr faina alba</p>
-					<p>2lg praf de copt</p>
-					<p>1lg esenta de vanilie</p>
-					<p>250ml lapte</p>
-					<p>200ml frisca lichida</p>
-					<p>200gr ciocolata neagra</p>
+					<h3>Ingrediente blat:</h3>
+					<ul>
+					<li>6 oua</li>
+					<li>130g zahar</li>
+					<li>120g faina</li>
+					<li>20gr cacao pudra</li>
+					<li>o lingura rom</li>
+					<li>un praf de sare</li>
+					<li>1 plic zahar vanilat</li>
+				</ul>
+
+					<h3>Ingrediente crema:</h3>
+					<ul>
+						<li>4 oua</li>
+						<li>240g zahar tos</li>
+						<li>4lg apa</li>
+						<li>200g ciocolata neagra</li>
+						<li>1-2lg cacao</li>
+						<li>350g unt</li>
+						<li>o esenta de vanilie</li>
+					</ul>
 
 
 				</div>
@@ -197,11 +166,11 @@
 			<!--<div class="col-md-4"> -->
 				<div class="feature-text">
 					<h3>Preparare</h3>
-					<p>Preîncalziți cuptorul la 180 de grade Celsius.</p>
-					<p>For the cake, place all of the cake ingredients, except the boiling water, into a large mixing bowl. Using a wooden spoon, or electric whisk, beat the mixture until smooth and well combined. </p>
-					<p>Add the boiling water to the mixture, a little at a time, until smooth. (The cake mixture will now be very liquid.) </p>
-					<p>Lorem ipsum dolor sit amet, consectetuer adispiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna </p>
-					<p> aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exercitation ullamcorper suscipit lobortis nisl ut aliquip </p>
+					<p>Preîncalziți cuptorul la 180 de grade Celsius, , apoi am uns cu unt o forma de tort cu diametrul de 23 cm si am tapetat-o cu faina.Am amestecat faina cu cacaoa si le-am cernut. Intr-un vas, am batut albusurile spuma tare cu un praf de sare. Am adaugat apoi o lingura de rom si treptat zaharul impreuna cu zaharul vanilat si am mixat in continuare pana am obtinut o spuma tare si lucioasa. Am adaugat apoi galbenusurile si le-am incorporat usor cu spatula. La final am adaugat faina si cacaoa in ploaie si le-am incorporat tot cu spatula usor, prin miscari de rasturnare de jos in sus. Am turnat compozitia in tava pregatita si am pus-o imediat in cuptorul incins.</p>
+					<p>Am copt 35 de minute la 180ºC pana blatul a trecut testul scobitorii (o scobitoare introdusa in blat iese curata, fara urme de aluat necopt). Cuptorul nu se deschide in primele 20 de minute si nici nu se reduce focul in timpul acesta. Altfel riscam ca blatul sa se lase.</p>
+					<p>Am luat vasul de pe aburi, am pus deoparte intr-un bol micut 2 linguri de crema, apoi am adaugat imediat ciocolata. Am amestecat pana s-a topit, apoi am adugat si cacaoa cernuta si am incorporat-o. Am lasat crema sa se raceasca.Cand s-a racit, am adaugat aromele. Pentru asamblarea tortului, am taiat blatul in 3 felii egale. Am pus prima felie pe un platou, apoi am pus pe ea un sfert din crema si am nivelat-o. Am pus a doua felie de blat, apoi inca un sfert de crema si a treia felie de blat. Pentru imbracarea tortului am folosit cealalta jumatate de crema.</p>
+
+
 
 				</div>
 			</div>
@@ -217,7 +186,11 @@
 	</div>
 </div>
 
-
+<div class="row">
+	<div class="col-md-4 col-md-offset-4 text-center animate-box">
+		<a href="blogbucatarie.html" class="btn btn-primary btn-lg">Vezi articolele de bucatarie</a>
+	</div>
+</div>
 
 <h3></h3>
  <!--poza vine pe mijloc
