--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
 							<p>Orar: L-V: 8-14, vinerea asta de la 7 (recuperam).</p>
 							<ul class="contact-info">
 								<li><i class="icon-location-pin"></i>Str. Ghirlandei, nr.4, 300231, Timisoara, Jud. Timis, Romania</li>
-								<li><i class="icon-phone2"></i>0778...scuza-ma, esti cam necopt</li>
+								<li><i class="icon-phone2"></i>0722...ti-l spun cand suntem doar noi</li>
 								<li><i class="icon-mail"></i><a href="https://www.google.com/search?newwindow=1&rlz=1C1CHBF_enRO802RO802&biw=1536&bih=723&tbm=isch&sa=1&ei=nb0_XLrvBcmdsAeu2KiQDA&q=puppy&oq=puppy&gs_l=img.3..0l10.24253.26126..26281...0.0..0.84.371.5......1....1..gws-wiz-img.......35i39j0i67.6JbKu8meFJY#imgrc=ak7pTzW7wH53xM:">anasiteonuaumailinca.com</a></li>
 								<li><i class="icon-globe2"></i><a href="https://www.google.com/search?newwindow=1&rlz=1C1CHBF_enRO802RO802&biw=1536&bih=723&tbm=isch&sa=1&ei=nb0_XLrvBcmdsAeu2KiQDA&q=puppy&oq=puppy&gs_l=img.3..0l10.24253.26126..26281...0.0..0.84.371.5......1....1..gws-wiz-img.......35i39j0i67.6JbKu8meFJY#imgrc=ak7pTzW7wH53xM:">anasiteonuausiteinca.com</a></li>
 							</ul>
