--- a/6post-propria-ta-gradina.html
+++ b/6post-propria-ta-gradina.html
@@ -215,7 +215,11 @@
 
 </div>
 
-
+<div class="row">
+	<div class="col-md-4 col-md-offset-4 text-center animate-box">
+		<a href="bloggradina.html" class="btn btn-primary btn-lg">Vezi articolele de gradinarit</a>
+	</div>
+</div>
 
 <h3></h3>
  <!--poza vine pe mijloc
