--- a/blogpentrutine.html
+++ b/blogpentrutine.html
@@ -125,7 +125,7 @@
 							<a href="#"><img class="img-responsive" src="images/closet.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>O noua ordine in closet</a></h3>
+									<h3><a href=""#>O noua ordine in garderoba</a></h3>
 									<span class="posted_by">Noiembrie 16</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Vă întrebaţi ce aţi putea face într-o zi de duminică ploioasă şi friguroasă?</p>
