--- a/index.html
+++ b/index.html
@@ -300,6 +300,11 @@ Your browser does not support the video tag.
 							</div>
 						</div>
 					</div>
+          </div>
+          <div class="row">
+            <div class="col-md-4 col-md-offset-4 text-center animate-box">
+              <a href="articole.html" class="btn btn-primary btn-lg">Vezi toate articolele</a>
+            </div>
 				</div>
 				<div class="clearfix visible-md-block"></div>
 			</div>
